# entari-plugin-llm

./: .gitignore  entari.yml  pyproject.toml
src/entari_plugin_llm/: __init__.py  _handler.py  _jsondata.py  _types.py  config.py  exception.py  log.py  model.py  service.py
src/entari_plugin_llm/events/: tools.py
src/entari_plugin_llm/listeners/: __init__.py
src/entari_plugin_llm/matchers/: __init__.py  utils.py
